fix jumper

--- a/frontend/src/pages/ui/JumpToSelect.module.scss
+++ b/frontend/src/pages/ui/JumpToSelect.module.scss
@@ -2,5 +2,6 @@
 @import '../../styles/globals.scss';
 
 .JumpToLink {
+  color: $alt-black !important;
   text-decoration: none !important;
 }
